[gd_scene load_steps=10 format=2]

[ext_resource path="res://Dungeon/Game/Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Dungeon/Game/ParallaxBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Dungeon/Game/Assets/high_score.tscn" type="PackedScene" id=3]
[ext_resource path="res://Dungeon/Game/Environment/world_graphics.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Theme/MainMenuButtons.tres" type="Theme" id=5]

[sub_resource type="Animation" id=1]
length = 5.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/Neon:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 3 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/Neon:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 3 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/Neon:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 3 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/Neon:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1, 3 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("HBoxContainer/MarginContainer/VBoxContainer/button_start:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 2, 4 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("HBoxContainer/MarginContainer/VBoxContainer/button_start:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 2, 4 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("HBoxContainer/MarginContainer/VBoxContainer/button_start:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 2, 4 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("HBoxContainer/MarginContainer/VBoxContainer/button_start:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 2, 4 )
}
tracks/8/type = "bezier"
tracks/8/path = NodePath("HBoxContainer/MarginContainer/VBoxContainer/button_exit:modulate:r")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 2.3, 4.3 )
}
tracks/9/type = "bezier"
tracks/9/path = NodePath("HBoxContainer/MarginContainer/VBoxContainer/button_exit:modulate:g")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 2.3, 4.3 )
}
tracks/10/type = "bezier"
tracks/10/path = NodePath("HBoxContainer/MarginContainer/VBoxContainer/button_exit:modulate:b")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 2.3, 4.3 )
}
tracks/11/type = "bezier"
tracks/11/path = NodePath("HBoxContainer/MarginContainer/VBoxContainer/button_exit:modulate:a")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 2.3, 4.3 )
}
tracks/12/type = "bezier"
tracks/12/path = NodePath("HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/Fire:modulate:r")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.3, 3.3 )
}
tracks/13/type = "bezier"
tracks/13/path = NodePath("HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/Fire:modulate:g")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.3, 3.3 )
}
tracks/14/type = "bezier"
tracks/14/path = NodePath("HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/Fire:modulate:b")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.3, 3.3 )
}
tracks/15/type = "bezier"
tracks/15/path = NodePath("HBoxContainer/MarginContainer/VBoxContainer/MarginContainer/Fire:modulate:a")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.3, 3.3 )
}
tracks/16/type = "bezier"
tracks/16/path = NodePath("HBoxContainer/MarginContainer/VBoxContainer/button_option:self_modulate:r")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2.3, 3.2 )
}
tracks/17/type = "bezier"
tracks/17/path = NodePath("HBoxContainer/MarginContainer/VBoxContainer/button_option:self_modulate:g")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2.3, 3.2 )
}
tracks/18/type = "bezier"
tracks/18/path = NodePath("HBoxContainer/MarginContainer/VBoxContainer/button_option:self_modulate:b")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2.3, 3.2 )
}
tracks/19/type = "bezier"
tracks/19/path = NodePath("HBoxContainer/MarginContainer/VBoxContainer/button_option:self_modulate:a")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2.3, 3.2 )
}
tracks/20/type = "bezier"
tracks/20/path = NodePath(".:modulate:r")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/21/type = "bezier"
tracks/21/path = NodePath(".:modulate:g")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/22/type = "bezier"
tracks/22/path = NodePath(".:modulate:b")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"points": PoolRealArray( 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/23/type = "bezier"
tracks/23/path = NodePath(".:modulate:a")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/24/type = "value"
tracks/24/path = NodePath("../high_scores:visible")
tracks/24/interp = 1
tracks/24/loop_wrap = true
tracks/24/imported = false
tracks/24/enabled = true
tracks/24/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/25/type = "value"
tracks/25/path = NodePath(".:visible")
tracks/25/interp = 1
tracks/25/loop_wrap = true
tracks/25/imported = false
tracks/25/enabled = true
tracks/25/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 2, 1, 2, 1 ), Color( 2, 1, 2, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_player"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Main_Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="world_graphics" parent="." instance=ExtResource( 4 )]

[node name="main_menu_ui" type="MarginContainer" parent="."]
modulate = Color( 2, 1, 2, 1 )
anchor_left = 0.25
anchor_top = 0.75
anchor_right = 0.25
anchor_bottom = 0.75
margin_left = -638.686
margin_top = -1213.83
margin_right = -303.686
margin_bottom = -887.83
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 2, 2 )
size_flags_horizontal = 3
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="main_menu_ui"]
margin_left = 40.0
margin_top = 40.0
margin_right = 294.0
margin_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="main_menu_ui/HBoxContainer"]
margin_right = 202.0
margin_bottom = 246.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="main_menu_ui/HBoxContainer/MarginContainer"]
margin_right = 202.0
margin_bottom = 246.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 40

[node name="MarginContainer" type="HBoxContainer" parent="main_menu_ui/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 202.0
margin_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2

[node name="Neon" type="Label" parent="main_menu_ui/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 0.917647, 0, 1, 1 )
margin_right = 83.0
margin_bottom = 27.0
theme = ExtResource( 5 )
text = "Neon"

[node name="Fire" type="Label" parent="main_menu_ui/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 0, 0.368627, 1, 1 )
margin_left = 87.0
margin_right = 167.0
margin_bottom = 27.0
theme = ExtResource( 5 )
text = " Fire"

[node name="button_start" type="Button" parent="main_menu_ui/HBoxContainer/MarginContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 67.0
margin_right = 202.0
margin_bottom = 100.0
theme = ExtResource( 5 )
text = "Start"
flat = true
expand_icon = true

[node name="button_option" type="Button" parent="main_menu_ui/HBoxContainer/MarginContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 140.0
margin_right = 202.0
margin_bottom = 173.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 5 )
text = "HighScores"
flat = true
expand_icon = true

[node name="button_exit" type="Button" parent="main_menu_ui/HBoxContainer/MarginContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 213.0
margin_right = 202.0
margin_bottom = 246.0
theme = ExtResource( 5 )
text = "Exit"
flat = true
expand_icon = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="main_menu_ui"]
autoplay = "Fade_In"
anims/Fade_In = SubResource( 1 )
anims/Fade_Out = SubResource( 2 )

[node name="high_scores" type="MarginContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -621.2
margin_top = -1254.27
margin_right = -58.2001
margin_bottom = -1182.27
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="high_scores"]
margin_right = 563.0
margin_bottom = 72.0
custom_constants/separation = 12

[node name="button_menu" type="Button" parent="high_scores/VBoxContainer"]
margin_right = 563.0
margin_bottom = 33.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0, 0.972549, 1 )
custom_colors/font_color_hover = Color( 0.682353, 0, 0.721569, 1 )
text = "Return To Menu"
flat = true
expand_icon = true

[node name="headers" parent="high_scores/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 45.0
margin_right = 563.0
margin_bottom = 72.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="high_scores"]
anims/fade_in = SubResource( 3 )
anims/fade_out = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -352.346, -909.393 )
current = true
zoom = Vector2( 1.1, 1.1 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 2 )]
[connection signal="pressed" from="main_menu_ui/HBoxContainer/MarginContainer/VBoxContainer/button_start" to="." method="start_game" flags=3]
[connection signal="pressed" from="main_menu_ui/HBoxContainer/MarginContainer/VBoxContainer/button_option" to="." method="_on_button_option_pressed"]
[connection signal="pressed" from="main_menu_ui/HBoxContainer/MarginContainer/VBoxContainer/button_exit" to="." method="exit_game"]
[connection signal="pressed" from="high_scores/VBoxContainer/button_menu" to="." method="_on_button_menu_pressed"]
